add DetailFragment and modify RealEstate variable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,5 +18,11 @@
         </view>
     </LinearLayout>
 
+    <fragment
+        android:id="@+id/main_detail_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
 
 </LinearLayout>
