--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -35,7 +35,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_margin="10dp"/>
-    <Button
+    <view class="androidx.recyclerview.widget.RecyclerView"
         android:id="@+id/fragment_media"
         android:layout_width="match_parent"
         android:layout_height="60dp"
