add String line(Values) create EditActivity

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -18,7 +18,7 @@
             android:id="@+id/fragment_warning_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select a Real Estate"
+            android:text="@string/fragment_warning"
             android:textSize="30sp"
             android:textColor="#111111"
             android:layout_marginTop="55dp"
@@ -31,7 +31,7 @@
         android:id="@+id/fragment_media_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Media"
+        android:text="@string/fragment_media_title"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_margin="10dp"/>
@@ -46,7 +46,7 @@
         android:id="@+id/fragment_description_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description"
+        android:text="@string/fragment_description_title"
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_below="@id/fragment_media"
@@ -55,8 +55,7 @@
         android:id="@+id/fragment_description_text"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
-        android:text="this text is just an example as description text.
-It long just to have make the body of this screen properly."
+        android:text="@string/fragment_description_text"
         android:layout_below="@id/fragment_description_title"
         android:layout_margin="10dp"/>
 
@@ -65,7 +64,7 @@ It long just to have make the body of this screen properly."
         android:id="@+id/fragment_surface_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="surface"
+        android:text="@string/fragment_surface_title"
         android:textStyle="bold"
         android:layout_below="@+id/fragment_description_text"
         android:layout_marginStart="15dp" />
@@ -73,7 +72,7 @@ It long just to have make the body of this screen properly."
         android:id="@+id/fragment_surface_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0m"
+        android:text="@string/fragment_surface_base"
         android:layout_below="@id/fragment_surface_title"
         android:layout_marginTop="3dp"
         android:layout_marginStart="40dp"/>
@@ -84,7 +83,7 @@ It long just to have make the body of this screen properly."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:text="number of room"
+        android:text="@string/fragment_room_title"
         android:layout_below="@id/fragment_surface_text"
         android:layout_marginTop="15dp"
         android:layout_marginStart="10dp"/>
@@ -92,7 +91,7 @@ It long just to have make the body of this screen properly."
         android:id="@+id/fragment_room_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/fragment_room_base"
         android:layout_below="@id/fragment_room_title"
         android:layout_marginTop="3dp"
         android:layout_marginStart="40dp"/>
@@ -103,7 +102,7 @@ It long just to have make the body of this screen properly."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:text="number of bathroom"
+        android:text="@string/fragment_bathroom"
         android:layout_below="@id/fragment_room_text"
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"/>
@@ -111,7 +110,7 @@ It long just to have make the body of this screen properly."
         android:id="@+id/fragment_bathroom_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/fragment_room_base"
         android:layout_below="@id/fragment_bathroom_title"
         android:layout_marginTop="3dp"
         android:layout_marginStart="40dp"/>
@@ -121,7 +120,7 @@ It long just to have make the body of this screen properly."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:text="number of bedroom"
+        android:text="@string/fragment_bedroom"
         android:layout_below="@id/fragment_room_text"
         android:layout_toEndOf="@id/fragment_bathroom_title"
         android:layout_marginTop="10dp"
@@ -130,7 +129,7 @@ It long just to have make the body of this screen properly."
         android:id="@+id/fragment_bedroom_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/fragment_room_base"
         android:layout_below="@id/fragment_bedroom_title"
         android:layout_toEndOf="@id/fragment_bathroom_text"
         android:layout_marginTop="3dp"
@@ -142,7 +141,7 @@ It long just to have make the body of this screen properly."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:text="location"
+        android:text="@string/fragment_location_title"
         android:layout_below="@id/fragment_description_text"
         android:layout_toEndOf="@id/fragment_surface_title"
         android:layout_marginStart="230dp" />
@@ -150,10 +149,7 @@ It long just to have make the body of this screen properly."
         android:id="@+id/fragment_location_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1 something
-        \n apt 6A
-        \n somewhere
-        \n NL 00000 \n nowhereland"
+        android:text="@string/fragment_location_base"
         android:layout_below="@id/fragment_location_title"
         android:layout_toEndOf="@id/fragment_surface_text"
         android:layout_marginStart="230dp"/>
