--- a/app/src/main/res/layout/media_cell.xml
+++ b/app/src/main/res/layout/media_cell.xml
@@ -7,6 +7,7 @@
     <ImageView
         android:id="@+id/media_cell_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:contentDescription="@string/media_description"/>
 
 </LinearLayout>
