--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".controller.DetailFragment">
 
+    <Button
+        android:id="@+id/fragment_edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp"
+        android:text="Edit"/>
+
     <FrameLayout
         android:id="@+id/fragment_warning_layout"
         android:layout_width="300dp"
@@ -29,7 +38,7 @@
 
     <TextView
         android:id="@+id/fragment_media_title"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:text="@string/fragment_media_title"
         android:textSize="20sp"
@@ -39,7 +48,9 @@
         android:id="@+id/fragment_media"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@id/fragment_media_title"/>
+        android:layout_below="@id/fragment_media_title"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
 
 
     <TextView
