--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -7,6 +7,7 @@
         android:id="@+id/tool_search"
         android:title="@string/toolbar_search"
         app:showAsAction="always"
+        app:actionViewClass="android.widget.SearchView"
         android:icon="@android:drawable/ic_menu_search"
         />
 
