--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -46,6 +46,16 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"/>
 
+    <Spinner
+        android:id="@+id/edit_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edit_price"
+        android:layout_toEndOf="@id/edit_surface"
+        android:spinnerMode="dropdown"
+        android:background="@android:drawable/btn_dropdown"/>
+
+
     <EditText
         android:id="@+id/edit_description"
         android:layout_width="500dp"
