--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -12,7 +12,18 @@
         android:layout_marginTop="5dp"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="10dp"
-        android:text="Edit"/>
+        android:text="@string/fragment_button_edit"/>
+
+    <Button
+        android:id="@+id/fragment_edit_new"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/fragment_edit_button"
+        android:layout_marginEnd="10dp"
+        android:text="@string/fragment_button_new"
+        />
 
     <FrameLayout
         android:id="@+id/fragment_warning_layout"
@@ -51,6 +62,64 @@
         android:layout_below="@id/fragment_media_title"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"/>
+
+
+    <TextView
+        android:id="@+id/fragment_price_title"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_price"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_toEndOf="@id/fragment_media_title"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"/>
+    <TextView
+        android:id="@+id/fragment_price_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_price_base"
+        android:layout_below="@id/fragment_price_title"
+        android:layout_toEndOf="@id/fragment_media_title"
+        android:layout_marginStart="20dp"/>
+
+    <TextView
+        android:id="@+id/fragment_date_entree_title"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_date_entree_title"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_toEndOf="@id/fragment_price_title"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"/>
+    <TextView
+        android:id="@+id/fragment_date_entree_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_date_entree_base"
+        android:layout_below="@id/fragment_date_entree_title"
+        android:layout_toEndOf="@id/fragment_price_title"
+        android:layout_marginStart="20dp"/>
+
+    <TextView
+        android:id="@+id/fragment_date_vente_title"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_date_vente_title"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_toEndOf="@id/fragment_date_entree_title"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"/>
+    <TextView
+        android:id="@+id/fragment_date_vente_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_date_vente_base"
+        android:layout_below="@id/fragment_date_vente_title"
+        android:layout_toEndOf="@id/fragment_date_entree_title"
+        android:layout_marginStart="20dp"/>
 
 
     <TextView
@@ -109,42 +178,42 @@
 
 
     <TextView
-        android:id="@+id/fragment_bathroom_title"
+        android:id="@+id/fragment_agent_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:text="@string/fragment_bathroom"
+        android:text="@string/fragment_agent"
         android:layout_below="@id/fragment_room_text"
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"/>
     <TextView
-        android:id="@+id/fragment_bathroom_text"
+        android:id="@+id/fragment_agent_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fragment_room_base"
-        android:layout_below="@id/fragment_bathroom_title"
+        android:text="@string/fragment_agent_base"
+        android:layout_below="@id/fragment_agent_title"
         android:layout_marginTop="3dp"
-        android:layout_marginStart="40dp"/>
+        android:layout_marginStart="20dp"/>
 
     <TextView
-        android:id="@+id/fragment_bedroom_title"
+        android:id="@+id/fragment_status_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:text="@string/fragment_bedroom"
+        android:text="@string/fragment_status"
         android:layout_below="@id/fragment_room_text"
-        android:layout_toEndOf="@id/fragment_bathroom_title"
+        android:layout_toEndOf="@id/fragment_agent_title"
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"/>
     <TextView
-        android:id="@+id/fragment_bedroom_text"
+        android:id="@+id/fragment_status_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fragment_room_base"
-        android:layout_below="@id/fragment_bedroom_title"
-        android:layout_toEndOf="@id/fragment_bathroom_text"
+        android:text="@string/fragment_statut_base"
+        android:layout_below="@id/fragment_status_title"
+        android:layout_toEndOf="@id/fragment_agent_text"
         android:layout_marginTop="3dp"
-        android:layout_marginStart="140dp"/>
+        android:layout_marginStart="30dp"/>
 
 
     <TextView
