--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -99,13 +99,13 @@
         android:layout_marginStart="10dp"/>
 
     <EditText
-        android:id="@+id/edit_postalcode"
+        android:id="@+id/edit_agent"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:hint="@string/edit_postal"
-        android:autofillHints="@string/edit_postal"
-        android:layout_below="@id/edit_description"
+        android:inputType="text"
+        android:hint="@string/edit_agent"
+        android:autofillHints="@string/edit_agent"
+        android:layout_below="@id/edit_apartment"
         android:layout_toEndOf="@id/edit_country"
         android:layout_marginStart="10dp"/>
 
@@ -117,7 +117,7 @@
         android:hint="@string/edit_apartment"
         android:autofillHints="@string/edit_apartment"
         android:layout_below="@id/edit_description"
-        android:layout_toEndOf="@id/edit_postalcode"
+        android:layout_toEndOf="@id/edit_country"
         android:layout_marginStart="10dp"/>
 
     <Button
