--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -188,7 +188,7 @@
         android:layout_marginStart="15dp"/>
     <TextView
         android:id="@+id/fragment_agent_text"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:text="@string/fragment_agent_base"
         android:layout_below="@id/fragment_agent_title"
