--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -233,4 +233,22 @@
         android:layout_below="@id/fragment_location_title"
         android:layout_toEndOf="@id/fragment_surface_text"
         android:layout_marginStart="230dp"/>
+
+    <TextView
+        android:id="@+id/fragment_Interest_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="@string/fragment_interest_title"
+        android:layout_below="@id/fragment_description_text"
+        android:layout_toEndOf="@id/fragment_location_title"
+        android:layout_marginStart="40dp" />
+    <TextView
+        android:id="@+id/fragment_Interest_text"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:text="@string/fragment_interest_text"
+        android:layout_below="@id/fragment_location_title"
+        android:layout_toEndOf="@id/fragment_location_title"
+        android:layout_marginStart="40dp"/>
 </RelativeLayout>
