--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -251,4 +251,16 @@
         android:layout_below="@id/fragment_location_title"
         android:layout_toEndOf="@id/fragment_location_title"
         android:layout_marginStart="40dp"/>
+
+    <ImageView
+        android:id="@+id/fragment_map"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_toEndOf="@id/fragment_Interest_title"
+        android:layout_below="@id/fragment_description_text"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="map"
+        />
+
 </RelativeLayout>
