--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -137,6 +137,8 @@
         android:layout_height="80dp"
         android:text="@string/fragment_description_text"
         android:layout_below="@id/fragment_description_title"
+        android:layout_toStartOf="@id/fragment_map"
+        android:layout_alignParentStart="true"
         android:layout_margin="10dp"/>
 
 
@@ -223,16 +225,18 @@
         android:textStyle="bold"
         android:text="@string/fragment_location_title"
         android:layout_below="@id/fragment_description_text"
-        android:layout_toEndOf="@id/fragment_surface_title"
-        android:layout_marginStart="230dp" />
+        android:layout_marginEnd="50dp"
+        android:layout_toStartOf="@id/fragment_map" />
+
     <TextView
         android:id="@+id/fragment_location_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fragment_location_base"
         android:layout_below="@id/fragment_location_title"
-        android:layout_toEndOf="@id/fragment_surface_text"
-        android:layout_marginStart="230dp"/>
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="30dp"
+        android:layout_toStartOf="@id/fragment_map"
+        android:text="@string/fragment_location_base" />
 
     <TextView
         android:id="@+id/fragment_Interest_title"
@@ -241,26 +245,26 @@
         android:textStyle="bold"
         android:text="@string/fragment_interest_title"
         android:layout_below="@id/fragment_description_text"
-        android:layout_toEndOf="@id/fragment_location_title"
-        android:layout_marginStart="40dp" />
+        android:layout_marginStart="150dp"
+        android:layout_toEndOf="@id/fragment_surface_text" />
     <TextView
         android:id="@+id/fragment_Interest_text"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:text="@string/fragment_interest_text"
         android:layout_below="@id/fragment_location_title"
-        android:layout_toEndOf="@id/fragment_location_title"
-        android:layout_marginStart="40dp"/>
+        android:layout_marginStart="150dp"
+        android:layout_toEndOf="@id/fragment_surface_text"/>
 
     <ImageView
         android:id="@+id/fragment_map"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_toEndOf="@id/fragment_Interest_title"
-        android:layout_below="@id/fragment_description_text"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="10dp"
-        android:contentDescription="map"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:layout_below="@id/fragment_edit_new"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:layout_alignParentEnd="true"
+        android:contentDescription="@string/fragment_map_description"
         />
 
 </RelativeLayout>
