--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -10,14 +10,17 @@
     Package name:
     A7:40:7B:81:40:3D:3F:5C:1B:D0:F9:CC:87:9B:80:EF:B9:64:F5:E3
 
+
     SHA-1 certificate fingerprint:
     A7:40:7B:81:40:3D:3F:5C:1B:D0:F9:CC:87:9B:80:EF:B9:64:F5:E3
+    6D:B8:1D:B3:F2:47:20:D0:A0:A2:85:F4:59:00:6A:8E:CA:26:07:3C
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
 
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
+    AIzaSyACRApsQtNqJSIupQcUST_jmv-5TbDTBQM
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyACRApsQtNqJSIupQcUST_jmv-5TbDTBQM</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBZ2c0rOzjNNvA5esfKyZzTmh8VuSffsD8</string>
 </resources>
