--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -13,7 +13,7 @@
         android:layout_below="@id/edit_title"
         android:layout_marginTop="15dp"
         android:layout_marginStart="10dp"
-        android:text="type"
+        android:text="@string/edit_type"
         />
 
     <EditText
@@ -31,7 +31,7 @@
         android:id="@+id/edit_price_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="price"
+        android:text="@string/edit_price"
         android:layout_below="@+id/edit_type"
         android:layout_marginTop="15dp"
         android:layout_marginStart="10dp"/>
@@ -60,7 +60,7 @@
         android:id="@+id/edit_surface_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="surface"
+        android:text="@string/edit_surface"
         android:layout_below="@+id/edit_price"
         android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
@@ -90,7 +90,7 @@
         android:id="@+id/edit_description_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="description"
+        android:text="@string/edit_description"
         android:layout_below="@+id/edit_surface"
         android:layout_marginTop="15dp"
         android:layout_marginStart="10dp"
@@ -110,7 +110,7 @@
         android:id="@+id/edit_address_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="address"
+        android:text="@string/edit_address"
         android:layout_below="@+id/edit_description"
         android:layout_marginTop="15dp"
         android:layout_marginStart="15dp"/>
@@ -119,7 +119,7 @@
         android:id="@+id/edit_city_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="city"
+        android:text="@string/edit_city"
         android:layout_below="@+id/edit_description"
         android:layout_toEndOf="@+id/edit_address_title"
         android:layout_marginTop="15dp"
@@ -129,7 +129,7 @@
         android:id="@+id/edit_country_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="country"
+        android:text="@string/edit_country"
         android:layout_below="@+id/edit_description"
         android:layout_toEndOf="@+id/edit_city_title"
         android:layout_marginTop="15dp"
@@ -171,7 +171,7 @@
         android:id="@+id/edit_apartment_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="apartment"
+        android:text="@string/edit_apartment"
         android:layout_below="@+id/edit_address"
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"/>
@@ -180,7 +180,7 @@
         android:id="@+id/edit_agent_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="agent"
+        android:text="@string/edit_agent"
         android:layout_below="@+id/edit_address"
         android:layout_toEndOf="@id/edit_apartment_title"
         android:layout_marginTop="10dp"
