--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,25 +5,35 @@
     android:layout_height="match_parent"
     tools:context=".controller.DetailFragment">
 
-    <Button
-        android:id="@+id/fragment_edit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="10dp"
-        android:text="@string/fragment_button_edit"/>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/fragment_edit_bottom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentBottom="true">
 
-    <Button
-        android:id="@+id/fragment_edit_new"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/fragment_edit_button"
-        android:layout_marginEnd="10dp"
-        android:text="@string/fragment_button_new"
-        />
+        <Button
+            android:id="@+id/fragment_edit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="10dp"
+            android:text="@string/fragment_button_edit"/>
+
+        <Button
+            android:id="@+id/fragment_edit_new"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="10dp"
+            android:text="@string/fragment_button_new"
+            />
+
+    </androidx.appcompat.widget.Toolbar>
+
+
 
     <FrameLayout
         android:id="@+id/fragment_warning_layout"
@@ -49,17 +59,19 @@
 
     <TextView
         android:id="@+id/fragment_media_title"
-        android:layout_width="70dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/fragment_media_title"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_margin="10dp"/>
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="10dp"/>
     <view class="androidx.recyclerview.widget.RecyclerView"
         android:id="@+id/fragment_media"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_below="@id/fragment_media_title"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"/>
 
@@ -133,11 +145,10 @@
         android:layout_margin="10dp"/>
     <TextView
         android:id="@+id/fragment_description_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="80dp"
         android:text="@string/fragment_description_text"
         android:layout_below="@id/fragment_description_title"
-        android:layout_toStartOf="@id/fragment_map"
         android:layout_alignParentStart="true"
         android:layout_margin="10dp"/>
 
@@ -225,44 +236,44 @@
         android:textStyle="bold"
         android:text="@string/fragment_location_title"
         android:layout_below="@id/fragment_description_text"
-        android:layout_marginEnd="50dp"
-        android:layout_toStartOf="@id/fragment_map" />
+        android:layout_marginEnd="40dp"
+        android:layout_alignParentEnd="true"/>
 
     <TextView
         android:id="@+id/fragment_location_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/fragment_location_title"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="30dp"
-        android:layout_toStartOf="@id/fragment_map"
+        android:layout_marginEnd="10dp"
+        android:layout_alignParentEnd="true"
         android:text="@string/fragment_location_base" />
 
     <TextView
-        android:id="@+id/fragment_Interest_title"
+        android:id="@+id/fragment_interest_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:text="@string/fragment_interest_title"
         android:layout_below="@id/fragment_description_text"
-        android:layout_marginStart="150dp"
-        android:layout_toEndOf="@id/fragment_surface_text" />
+        android:layout_marginEnd="50dp"
+        android:layout_toStartOf="@id/fragment_location_title" />
     <TextView
-        android:id="@+id/fragment_Interest_text"
+        android:id="@+id/fragment_interest_text"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:text="@string/fragment_interest_text"
-        android:layout_below="@id/fragment_location_title"
-        android:layout_marginStart="150dp"
-        android:layout_toEndOf="@id/fragment_surface_text"/>
+        android:layout_below="@id/fragment_interest_title"
+        android:layout_marginEnd="50dp"
+        android:layout_toStartOf="@id/fragment_location_title"/>
 
     <ImageView
         android:id="@+id/fragment_map"
-        android:layout_width="280dp"
-        android:layout_height="280dp"
-        android:layout_below="@id/fragment_edit_new"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_below="@id/fragment_agent_text"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="20dp"
         android:layout_alignParentEnd="true"
         android:contentDescription="@string/fragment_map_description"
         />
